--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon index.js"
+    "start": "node index.js"
   },
   "keywords": [],
   "author": "",
@@ -14,8 +14,5 @@
   "dependencies": {
     "express": "^4.17.1",
     "uuid": "^8.2.0"
-  },
-  "devDependencies": {
-    "nodemon": "^2.0.4"
   }
 }
