--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
-    "uuid": "^8.2.0"
+    "uuid": "^8.2.0",
+    "moment": "2.29.4"
   }
 }
