--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "express": "^4.17.1",
     "uuid": "^8.2.0",
-    "moment": "2.29.4"
+    "moment": "2.29.4",
+    "heroku-keep-awake": "^1.1.2"
   }
 }
