--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "^4.17.1",
     "uuid": "^8.2.0",
     "moment": "2.29.4",
-    "heroku-keep-awake": "^1.1.2"
+    "heroku-keep-awake": "^1.1.2",
+    "jsonwebtoken": "^9.0.2"
   }
 }
